--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hipstersmoothie/bmp-js"
+    "url": "https://github.com/hipstersmoothie/bmp-ts"
   },
   "files": [
     "dist/"
@@ -19,13 +19,15 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint -p . --format stylish",
-    "test": "jest"
+    "test": "jest",
+    "release": "auto shipit"
   },
   "dependencies": {
     "@types/node": "^10.11.7"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
+    "auto": "^7.6.0",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "lint-staged": "^7.3.0",
