--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2017",
     "declaration": true,
     "lib": ["esnext"],
+    "module": "commonjs",
     "moduleResolution": "node",
     "downlevelIteration": true,
     "noUnusedLocals": true,
