--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "bmp-ts",
   "version": "1.0.4",
   "description": "A pure typescript BMP encoder and decoder",
-  "main": "dist/index.js",
-  "exports": "./dist/index.js",
-  "types": "dist/index.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -19,40 +16,22 @@
     "email": "lisowski54@gmail.com"
   },
   "scripts": {
-    "build": "tsc",
-    "lint": "tslint -p . --format stylish",
+    "build": "tshy",
     "test": "jest",
     "release": "auto shipit"
   },
-  "dependencies": {
-    "@types/node": "^10.11.7"
-  },
   "devDependencies": {
     "@types/jest": "^23.3.5",
-    "auto": "^10.46.0",
-    "husky": "^1.1.2",
-    "jest": "^23.6.0",
-    "lint-staged": "^7.3.0",
-    "prettier": "^1.14.3",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-xo": "^0.9.0",
-    "typescript": "^3.1.3"
+    "@types/node": "^10.11.7",
+    "auto": "^11.1.2",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
+    "tshy": "^1.12.0",
+    "typescript": "^5.4.3"
   },
   "prettier": {
     "singleQuote": true
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
-    ]
   },
   "keywords": [
     "bmp",
@@ -99,5 +78,27 @@
       "!**/node_modules/**",
       "!**/vendor/**"
     ]
-  }
+  },
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    }
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
+  },
+  "main": "./dist/commonjs/index.js",
+  "types": "./dist/commonjs/index.d.ts",
+  "type": "module"
 }
