--- a/package.json
+++ b/package.json
@@ -17,18 +17,16 @@
   },
   "scripts": {
     "build": "tshy",
-    "test": "jest",
+    "test": "vitest",
     "release": "auto shipit"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
     "auto": "^11.1.2",
-    "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
     "tshy": "^1.12.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   },
   "prettier": {
     "singleQuote": true
@@ -47,39 +45,10 @@
     "javascript",
     "js"
   ],
-  "jest": {
-    "collectCoverage": true,
-    "coverageDirectory": "./coverage",
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text",
-      "html"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "testMatch": [
-      "**/*.test.+(ts|tsx|js)"
-    ],
-    "globals": {
-      "test-jest": {
-        "tsConfig": "tsconfig.json"
-      }
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "collectCoverageFrom": [
-      "**/*.{ts,tsx}",
-      "!**/*.d.ts",
-      "!**/dist/**",
-      "!**/node_modules/**",
-      "!**/vendor/**"
-    ]
-  },
   "tshy": {
+    "exclude": [
+      "**/__test__/**"
+    ],
     "exports": {
       "./package.json": "./package.json",
       ".": "./src/index.ts"
